Fix to issue 390. Added a  right-alignment style to the Mg per dose label in Clinical Regimen drug active ingredient (SSQ), to distinguish it from the Active ingredient field.

--- a/war/WEB-INF/resources/apps/common/theme/manta.css
+++ b/war/WEB-INF/resources/apps/common/theme/manta.css
@@ -415,3 +415,9 @@ ul {
 	display:none !important;
 	visibility:hidden !important;
 }
+
+.study-info .right-column-input-container label {
+    
+    text-align: right;
+    padding-right: 0.5em;
+}
